kustomize-canary/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: podinfo
  labels:
    app: podinfo
spec:
  type: ClusterIP
  selector:
    app: podinfo-primary
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 9898
    - port: 9999
      targetPort: grpc
      protocol: TCP
      name: grpc
    - port: 9797
      protocol: TCP
      targetPort: http
      name: http-metrics
